--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         ads:adSizes="BANNER"
-        ads:adUnitId="/21751243814/695002-BANNER-1" />
+        ads:adUnitId="/21751243814,22914181337/3324113-BANNER-1" />
 
     <FrameLayout
         android:id="@+id/banner_container"
